tp07/kubernetes-manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myapp
  labels:
    name: myapp
    environment: development
    purpose: docker-compose-migration
