tp07/kubernetes-manifests/05-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: myapp
  labels:
    app: database
    tier: data
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  selector:
    app: database
